syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.explorviz.code.proto";
option java_outer_classname = "CommitReport";

import "google/protobuf/empty.proto";

service CommitReportService {
  rpc sendCommitReport (CommitReportData) returns (google.protobuf.Empty) {}
}

message  CommitReportData {
  string commitID = 1;
  string parentCommitID = 2;
  string branchName = 3;
  repeated string files = 4;
  repeated string modified = 5;
  repeated string deleted = 6;
  repeated string added = 7;
  repeated FileMetricData fileMetric = 8;
  string commitTag = 9;
  string landscapeToken = 10;
  string applicationName = 11;
}

message FileMetricData {
  string fileName = 1;
  int32 loc = 2;
  int32 cyclomaticComplexity = 3;
  int32 numberOfMethods = 4;
}